# CToyProj

./: CMakeLists.txt  MolecularArray.h  MolecularArray_documentation.md  MolecularArray_tests.cpp  Node_Class.h  Node_test.cpp  myArray_class.h  myArray_documentation.md  myArray_test.cpp
GoogleTest/: gtest-port.cc  gtest.cc  gtest_main.cc
GoogleTest/gtest/: gtest-death-test.h  gtest-printers.h  gtest-typed-test.h  gtest.h
GoogleTest/gtest/internal/: gtest-internal.h  gtest-linked_ptr.h  gtest-port.h
